test/parallel/forall/checks/forall-inout-domain-bug-16301.good
forall-inout-domain-bug-16301.chpl:9: In function 'foo':
forall-inout-domain-bug-16301.chpl:12: error: cannot assign to const variable
forall-inout-domain-bug-16301.chpl:11: note: The shadow variable 'D' is constant due to forall intents in this loop
